refactor : modify GameUtil.inputToNameList logic GameUtil 클래스 - inputToNameList() 메소드 내부에서 for-each문으로 isNameOK()로 각 원소를 확인했던 것을   Stream의 peek() 메소드로 각 원소를 isNameOK로 판단하도록 수정했음.   이를 통해, stream을 끊지 않고 가공해 반환할 수 있게 되었다.